--- a/template/package.json
+++ b/template/package.json
@@ -5,7 +5,7 @@
   "author": "{{ author }}",
   "main": "dist/{{ name }}.min.js",
   "module": "dist/{{ name }}.es.js",
-  "types": "typings/{{ name }}.d.ts",
+  "types": "typings/index.d.ts",
   "scripts": {
     "lint": "eslint --ext .ts --ext .tsx src -c .eslintrc.js",
     "fix": "npm run lint --fix",
