--- a/template/package.json
+++ b/template/package.json
@@ -14,8 +14,8 @@
     "build": "tsc --module commonjs && rollup -c rollup.config.ts",
     "prepublish": "npm run build",
     "commit": "git-cz --disable-emoji",
-    "prepare": "husky install",
-    "husky": "npm run prepare && npm run commit-msg && npm run pre-push",
+    "prepare": "npm run husky",
+    "husky": "husky install && npm run commit-msg && npm run pre-push",
     "commit-msg": "husky add .husky/commit-msg 'npx --no-install commitlint --edit $1'",
     "pre-push": "husky add .husky/pre-push 'npm run test'",
     "unhusky": "husky uninstall"
