--- a/template/package.json
+++ b/template/package.json
@@ -16,8 +16,8 @@
     "commit": "git-cz --disable-emoji",
     "prepare": "rimraf .husky && npm run husky",
     "husky": "husky install && npm run commit-msg && npm run pre-push",
-    "commit-msg": "husky add .husky/commit-msg 'npx --no-install commitlint --edit $1'",
-    "pre-push": "husky add .husky/pre-push 'npm run test'",
+    "commit-msg": "husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\"",
+    "pre-push": "husky add .husky/pre-push \"npm run test\"",
     "unhusky": "husky uninstall"
   },
   "repository": {
