--- a/template/package.json
+++ b/template/package.json
@@ -18,7 +18,7 @@
     "husky": "husky install && npm run commit-msg && npm run pre-push",
     "commit-msg": "husky add .husky/commit-msg \"npx --no-install commitlint --edit $1\"",
     "pre-push": "husky add .husky/pre-push \"npm run test\"",
-    "unhusky": "husky uninstall"
+    "unhusky": "husky uninstall && rimraf .husky"
   },
   "repository": {
     "type": "git",
