--- a/template/package.json
+++ b/template/package.json
@@ -6,6 +6,7 @@
   "main": "dist/{{ name }}.min.js",
   "module": "dist/{{ name }}.es.js",
   "types": "typings/index.d.ts",
+  "private": false,
   "scripts": {
     "lint": "eslint --ext .ts --ext .tsx src -c .eslintrc.js",
     "fix": "npm run lint --fix",
